# ultron

./: .gitignore  README.md  docker-compose.yml  rest_client.http
ultron-web/: Dockerfile  entrypoint.sh
ultron_web/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
ultron_web/apps/config/: models.py
ultron_web/apps/config/migrations/: 0001_initial.py  0002_recortequeryconfig_last_indexing_moment.py  0003_auto_20200917_1957.py
ultron_web/apps/entities/: authentication.py
ultron_web/apps/entities/api/: serializers.py  urls.py  views.py  viewsets.py
ultron_web/apps/recortes/: apps.py  consumer.py  documents.py  models.py  note_text.txt  search_index.py  tasks.py
ultron_web/apps/recortes/migrations/: 0001_initial.py
ultron_web/ultron_web/: asgi.py  celery.py  database_router.py  settings.py  urls.py  wsgi.py
