[tool.poetry]
name = "ultron-web"
version = "0.1.0"
description = "API for ultron database"
authors = ["Eduardo Basilio"]

[tool.poetry.dependencies]
python = "^3.8"
django-haystack = "^2.8.1"
djangorestframework = "^3.11.1"
django = "^3.1.1"
gunicorn = "^20.0.4"
elasticsearch = "5.3"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
