[tool.poetry]
name = "ultron-web"
version = "0.1.0"
description = "API for ultron database"
authors = ["Eduardo Basilio"]

[tool.poetry.dependencies]
python = "^3.8"
django-haystack = "^2.8.1"
djangorestframework = "^3.11.1"
django = "^3.1.1"
gunicorn = "^20.0.4"
elasticsearch = "5.3"
python-decouple = "^3.3"
psycopg2 = "^2.8.6"
celery = "^4.4.7"
librabbitmq = "^2.0.0"
django-celery-beat = "^2.0.0"
flower = "^0.9.5"

[tool.poetry.dev-dependencies]
django-extensions = "^3.0.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
